# threaded-generator

./: .gitignore  Makefile  README.md  RELEASING.md  TODO.md  pyproject.toml  threaded_generator.py
.github/workflows/: publish_test.yml
doc_source/: conf.py  monitor.rst  threaded_generator.rst
docs/: .buildinfo  api.html  genindex.html  index.html  monitor.html  objects.inv  py-modindex.html  search.html  searchindex.js  shutdown_queue.html  threaded_generator.html
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  monitor.doctree  shutdown_queue.doctree  threaded_generator.doctree
docs/_modules/: index.html
docs/_modules/threaded_generator/: monitor.html  shutdown_queue.html  threaded_generator.html
docs/_sources/: index.rst.txt  shutdown_queue.rst.txt
examples/: multithreading_video_processing.py  pipeline_throughput.py  video_multiprocessing.py  video_processing.py
src/threaded_generator/: __init__.py  distributed_queue.py  monitor.py  shutdown_queue.py  threaded_generator.py  threadonly_generator.py
tests/: test_threaded_generator.py
