[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threaded-generator"
version = "0.1.0"
description = "Buffer items from an iterable in a separate thread."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
authors = [
  { name = "Kwon-Young Choi", email = "kwon-young.choi@hotmail.fr" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/threaded_generator"]
